--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -39,11 +39,11 @@
       </div>
 
       <div class="general-info"></div>
-      <div class="note-part"></div>
+      <div class="note-container"><div class="note-part left-align"></div></div>
       <div class="slider col s8 hidden">
-        <ul class="images slides"></ul>
+        <ul class="images slides col 12"></ul>
       </div>
-      <div class="main"></div>
+      <div class="main col 11"></div>
 
     </div>
   </div>
@@ -62,8 +62,8 @@
 </script>
 
 <script id="gplaces-category" type="text/template">
-  <div class="category" id="<%%= name %>">
-    <h3><%%= title %></h3>
+  <div class="category col s2" id="<%%= name %>">
+    <h5 class="center-align"><%%= title %></h5>
     <ul>
     </ul>
   </div>
@@ -73,7 +73,7 @@
 <script id="gplaces-place" type="text/template">
   <li>
     <div class="row">
-      <div class="col s12 m7">
+      <div class="">
         <div class="card place" data-gid="<%%= gid %>">
           <div class="card-image">
             <img src="<%%= src %>">
@@ -98,35 +98,31 @@
 
 <script id="notes-form-template" type="text/template">
   <div class="row blue-grey-text">
-    <form id="note-form" class="col s12 m4">
-      <div class="row">
+    <form id="note-form" class="col s12">
         <div class="input-field col s12">
           <input id="note-title" type="text" name="title">
           <label for="note-title">Title</label>
         </div>
         <div class="input-field col s12">
-          <textarea name="body" rows="10" columns="10" id="note-body" class="materialize-textarea validate"></textarea>
+          <textarea name="body" rows="2" columns="10" id="note-body" class="materialize-textarea validate"></textarea>
           <label for="note-body">Note:</label>
         </div>
         <input name="destination_id" type="hidden" value="<%%= id %>" id="destination-id-input">
-        <div>
-          <a class="">
-            <span id="save-note" class="teal-text"><i class="mdi-action-done-all teal-text"></i>  Save</span>
-          </a>
-        </div>
-      </div>
+        <a id="save-note" class="teal-text">
+          <i class="mdi-action-done-all teal-text"></i>Save
+        </a>
     </form>
   </div>
 </script>
 
 <script id="note-display-template" type="text/template">
-  <div class="row">
-    <div class="col s12 m4">
+  <div class="row note-display">
+    <div class="note col s10">
       <div class="card blue-grey darken-1 note" data-note-id="<%%= note_id %>">
         <div class="card-content white-text">
           <span class="card-title"><%%= title %></span>
           <h6><%%= moment(date.split('T')[0]).format('MMMM Do YYYY') %>:</h6>
-          <p><%%= body %></p>
+          <p class="note-text"><%%= body %></p>
         </div>
         <div class="card-action">
           <a class="edit-note-button teal-text">Edit</a>
@@ -139,13 +135,13 @@
 
 <script id="edit-note-template" type="text/template">
   <div class="row white blue-grey-text">
-    <form id="note-edit-form" class="col s12">
+    <form id="note-edit-form" class="col s8">
       <div class="row">
-        <div class="input-field col s12">
+        <div class="input-field col s8">
           <input id="edit-title" type="text" name="title" class="validate" value="<%%= title %>">
         </div>
-        <div class="input-field col s12">
-          <textarea name="body" rows="10" columns="10" id="edit-body" class="materialize-textarea validate"><%%= body %></textarea>
+        <div class="input-field col s10">
+          <textarea name="body" rows="2" columns="10" id="edit-body" class="materialize-textarea validate"><%%= body %></textarea>
         </div>
         <div>
           <a class="">
