adds styling and organizes Google info

--- a/app/assets/javascripts/additionalAPIs.js.erb
+++ b/app/assets/javascripts/additionalAPIs.js.erb
@@ -10,7 +10,7 @@ addWolframInfo = function(basicInfo, wolframMap, populationInfo, populationGrowt
 }
 
 // creates div with photo and appends it to the DOM
-addPaniramioPhoto = function($photoTitle, $ownerName, $photoUrl, $photoFileUrl, $date){
+addPanoramioPhoto = function($photoTitle, $ownerName, $photoUrl, $photoFileUrl, $date){
   $(renderPanoramio({
     photoTitle: $photoTitle,
     ownerName: $ownerName,
