--- a/app/assets/javascripts/googlePlaceApi.js.erb
+++ b/app/assets/javascripts/googlePlaceApi.js.erb
@@ -14,6 +14,6 @@ addPlace = function($categoryEl, gid, name, src, rating) {
 
 // generates google's link to specific picture
 createPhotoUrl = function(photo_reference) {
-  // 'https://maps.googleapis.com/maps/api/place/photo?maxwidth=100&photoreference=' + photo_reference + '&key=<%= ENV["GOOGLE_BROWSER_API_KEY"] %>'
-  return 'http://upload.wikimedia.org/wikipedia/commons/2/2c/Its_something.png'
+  return 'https://maps.googleapis.com/maps/api/place/photo?maxwidth=100&photoreference=' + photo_reference + '&key=<%= ENV["GOOGLE_BROWSER_API_KEY"] %>'
+  // return 'http://upload.wikimedia.org/wikipedia/commons/2/2c/Its_something.png'
 }
