--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,19 +1,21 @@
 <div class="row">
 
   <div class="col s2">
-        <!-- Grey navigation panel -->
+    <!-- Grey navigation panel -->
     <div class="left-part">
       <h5>My Favorite Destinations:</h5>
       <ul class="favorites-list collection">
         <% @destinations.each do |des| %>
-          <a data-destination-id="<%= des.id %>" class="collection-item">
-            <span class="favorites"><%= des.location %></span>
-            <span class="remove right"><i class="mdi-action-highlight-remove"></i></span>
-          </a>
+          <li>
+            <a data-destination-id="<%= des.id %>" class="collection-item">
+              <span class="favorites"><%= des.location %></span>
+              <span class="remove right"><i class="mdi-action-highlight-remove"></i></span>
+            </a>
+          </li>
         <% end %>
       </ul>
     </div>
-  </div>
+  </div><!-- /col s2 -->
 
   <div class="col s10">
         <!-- Teal page content  -->
@@ -36,19 +38,25 @@
           </form>
         </div>
 
-      </div>
+      </div><!-- /top-part -->
 
-      <div class="general-info"></div>
-      <div class="note-container"><div class="note-part left-align"></div></div>
-      <div class="slider col s8 hidden">
+      <div class="general-info">
+      </div>
+      <div class="note-container hidden">
+        <!-- Notes are appended here. -->
+        <div class="note-part left-align">
+        </div>
+      </div>
+      <div class="slider hidden">
         <ul class="images slides col 12"></ul>
       </div>
-      <div class="main col 11"></div>
+      <div class="main">
+      </div>
 
-    </div>
-  </div>
+    </div><!-- box -->
+  </div><!-- col s10 -->
 
-</div>
+</div><!-- row -->
 
 <script id="title" type="text/template">
   <div class="col s12">
@@ -62,7 +70,7 @@
 </script>
 
 <script id="gplaces-category" type="text/template">
-  <div class="category col s2" id="<%%= name %>">
+  <div class="category col l4" id="<%%= name %>">
     <h5 class="center-align"><%%= title %></h5>
     <ul>
     </ul>
@@ -97,7 +105,7 @@
 
 
 <script id="notes-form-template" type="text/template">
-  <div class="row blue-grey-text">
+  <div class="row blue-grey-text" id="note-form-div">
     <form id="note-form" class="col s12">
         <div class="input-field col s12">
           <input id="note-title" type="text" name="title">
@@ -116,13 +124,17 @@
 </script>
 
 <script id="note-display-template" type="text/template">
-  <div class="row note-display">
-    <div class="note col s10">
-      <div class="card blue-grey darken-1 note" data-note-id="<%%= note_id %>">
+  <div class="row" style="display:inline-block; width: 350px; vertical-align: bottom;">
+    <div class="col s12">
+      <div class="card blue-grey darken-1" data-note-id="<%%= note_id %>" style="min-height: 250px;" >
         <div class="card-content white-text">
-          <span class="card-title"><%%= title %></span>
-          <h6><%%= moment(date.split('T')[0]).format('MMMM Do YYYY') %>:</h6>
-          <p class="note-text"><%%= body %></p>
+          <span class="card-title">
+            <%%= title %>
+          </span>
+          <h6>
+            <%%= moment(date.split('T')[0]).format('MMMM Do YYYY') %>:
+          </h6>
+          <p><%%= body %></p>
         </div>
         <div class="card-action">
           <a class="edit-note-button teal-text">Edit</a>
@@ -135,18 +147,18 @@
 
 <script id="edit-note-template" type="text/template">
   <div class="row white blue-grey-text">
-    <form id="note-edit-form" class="col s8">
+    <form id="note-edit-form" class="col s12">
       <div class="row">
         <div class="input-field col s8">
           <input id="edit-title" type="text" name="title" class="validate" value="<%%= title %>">
         </div>
         <div class="input-field col s10">
           <textarea name="body" rows="2" columns="10" id="edit-body" class="materialize-textarea validate"><%%= body %></textarea>
-        </div>
-        <div>
-          <a class="">
-            <span id="update-note"><i class="mdi-action-done-all teal-text"></i></span>
-            <span class="cancel-note-edit"><i class="mdi-navigation-close red-text text-darken-2"></i></span>
+          <a id="update-note" class="teal-text">
+            <i class="mdi-action-done-all teal-text"></i>Save
+          </a>
+          <a class="cancel-note-edit" class="teal-text">
+            <i class="mdi-navigation-close red-text text-darken-2"></i>Cancel
           </a>
         </div>
       </div>
@@ -193,5 +205,3 @@
     </div>
   </li>
 </script>
-
-
