--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -32,7 +32,7 @@
               </div>
               <div class="input-field col s6">
                 <input type="submit" value="Search" class="location-search-button btn waves-light">
-                <button id="random-search" class="btn waves-light waves-effect">Explore new Places!</button>
+                <button id="random-search" type="button" class="btn waves-light waves-effect">Explore new Places!</button>
               </div>
             </div>
           </form>
