--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -62,8 +62,8 @@
 }
 
 .card-title {
-  font-size: 1em;
-  color: black;
+  font-size: 1em !important;
+  /*color: black !important;*/
 }
 
 .slider {
